[package]
name = "mc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
jni = "0.20.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"


[dependencies.windows]
version = "0.44"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading", "Win32_Foundation", "Win32_Security"
]

[lib]
crate_type = ["cdylib"]
